# JournAi

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE.md  README.md  copy-icons.sh  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
app-store-pages/: privacy-policy.html  support.html
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/mobile/: index.html  package.json  tsconfig.json  vite.config.ts
apps/mobile/src-tauri/: Cargo.toml  tauri.conf.json
apps/mobile/src-tauri/icons/: README.md
apps/mobile/src-tauri/src/: lib.rs
docs/security/: sec-001-app-lock-and-db-encryption-architecture.md  sec-001-backup-runbook.md  sec-001-backup-validation.md
evals/: config.ts  run.ts
evals/datasets/: README.md  chat-agent.json  chat-golden.json  tool-routing.json
evals/lib/: agentWrapper.ts  db.ts  qualityEvaluator.ts  report.ts  runner.ts  toolEvaluator.ts  toolExecutor.ts  types.ts
evals/scripts/: evaluate.ts  optimize.ts
ralph/: prd.json  progress.txt
scripts/: seed-demo-data.ts
scripts/ralph/: prd.json  progress.txt
scripts/security/: backup_db.sh  restore_db.sh  validate_backup_restore.sh
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_lock.rs  ios_webview.rs  lib.rs  main.rs  secure_storage.rs
src/ai/: index.ts  prompts.ts  runtime.ts
src/components/: AiAccessGateModal.tsx  AppLockScreen.tsx  DatePicker.tsx  Layout.tsx  Modal.tsx  SettingsModal.tsx  Sidebar.tsx  ThemeToggle.tsx  TitleBar.tsx
src/constants/: entries.ts
src/contexts/: AiAccessContext.tsx  AppLockContext.tsx  CalendarContext.tsx  EntriesStateContext.tsx  EntryNavigationContext.tsx  FocusModeContext.tsx  InsightsContext.tsx  MobileNavContext.tsx  ProcessingContext.tsx  SettingsContext.tsx  SidebarContext.tsx  ThemeContext.tsx  UpdateContext.tsx
src/data/: dummyEntries.ts
src/hooks/: useAutoScroll.ts  useCalendar.ts  useChat.ts  useChats.ts  useDebounce.ts  useEntries.ts  useHaptics.ts  useKeyPress.ts  useKeyboard.ts  useMediaQuery.ts  usePullToRefresh.ts  useSpringAnimation.ts  useSwipeAction.ts  useSwipeNavigation.ts
src/lib/: appLock.ts  db.ts  secureStorage.ts  store.ts
src/pages/: Calendar.tsx  Chat.tsx  Entries.tsx  Insights.tsx  Projections.tsx
src/services/: agentTools.ts  ai.ts  analytics.ts  calendar.ts  chatMessages.ts  chats.ts  embeddings.ts  entries.ts  (+6 more)
tauri-mcp-server/: index.js  package.json
(+176 files in other folders)
